# ChangeLog for app-crypt/gnupg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.489 2013/10/07 19:19:58 alonbl Exp $

*gnupg-2.0.22 (07 Oct 2013)
*gnupg-1.4.15 (07 Oct 2013)

  07 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-1.4.15.ebuild,
  +gnupg-2.0.22.ebuild, -files/gnupg-2.0.21-CVE-2013-4351.patch,
  -gnupg-2.0.21-r2.ebuild, -gnupg-2.0.21.ebuild:
  Version bump, fix bug#487230

*gnupg-2.0.21-r2 (04 Oct 2013)

  04 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org>
  +files/gnupg-2.0.21-CVE-2013-4351.patch, +gnupg-2.0.21-r2.ebuild,
  -gnupg-2.0.21-r1.ebuild:
  Fix CVE-2013-4351, bug#484836

*gnupg-2.0.21-r1 (03 Oct 2013)

  03 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org> +gnupg-2.0.21-r1.ebuild:
  Cleanup ebuild, add epatch_user, resolves bug#486882

  19 Aug 2013; Tim Harder <radhermit@gentoo.org> -gnupg-1.4.13.ebuild,
  -gnupg-1.4.13-r1.ebuild, -gnupg-2.0.19.ebuild, -gnupg-2.0.19-r1.ebuild,
  -gnupg-2.0.19-r2.ebuild, -files/gnupg-2.0.19-support-sc-key-3072.patch,
  -files/gnupg-2.0.19-texinfo-5.patch:
  Remove old.

*gnupg-2.0.21 (19 Aug 2013)

  19 Aug 2013; Tim Harder <radhermit@gentoo.org> +gnupg-2.0.21.ebuild:
  Version bump.

  08 Aug 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for sh, wrt bug #478184

  08 Aug 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for sparc, wrt bug #478184

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for s390, wrt bug #478184

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for ppc64, wrt bug #478184

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for ia64, wrt bug #478184

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for alpha, wrt bug #478184

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.14.ebuild:
  Stable for arm, wrt bug #478184
