@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/gnupg-2.0.22.ebuild,v 1.1 2013/10/07 19:19:58 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/gnupg-2.0.22.ebuild,v 1.2 2013/10/08 09:14:38 alonbl Exp $
 
 EAPI="5"
 
@@ -105,6 +105,9 @@ src_compile() {
 
 src_install() {
 	default
+
+	# bug#192151
+	dobin tools/gpgsplit tools/gpg-zip
 
 	emake DESTDIR="${D}" -f doc/Makefile uninstall-nobase_dist_docDATA
 	rm "${ED}"/usr/share/gnupg/help* || die
