@@ -11,4 +11,4 @@ REQUIRED_USE=smartcard? ( !static )
 SLOT=0
 SRC_URI=mirror://gnupg/gnupg/gnupg-2.0.22.tar.bz2
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=fd9929f4776dc3bbcfef5eaa59077349
+_md5_=5879be16011c3615572985bdc83fab57
