@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.489 2013/10/07 19:19:58 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.490 2013/10/08 09:14:38 alonbl Exp $
+
+  08 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org> gnupg-2.0.22.ebuild:
+  Addd gpgsplit, gpg-zip, resolves bug#192151
 
 *gnupg-2.0.22 (07 Oct 2013)
 *gnupg-1.4.15 (07 Oct 2013)
